--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser-dynamic": "19.2.0",
     "@angular/router": "19.2.0",
     "@fortawesome/fontawesome-free": "7.0.1",
-    "bootstrap": "5.3.8",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "rxjs": "7.8.2",
     "tslib": "2.3.0",
     "zone.js": "0.15.1"
@@ -27,6 +29,7 @@
     "@angular-devkit/build-angular": "19.2.17",
     "@angular/cli": "19.2.17",
     "@angular/compiler-cli": "19.2.0",
+    "@angular/localize": "^19.2.0",
     "@types/jasmine": "5.1.0",
     "jasmine-core": "5.6.0",
     "karma": "6.4.0",
