--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "19.2.0",
     "@angular/platform-browser-dynamic": "19.2.0",
     "@angular/router": "19.2.0",
+    "@auth0/auth0-angular": "^2.5.0",
     "@fortawesome/fontawesome-free": "7.0.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
