--- a/angular.json
+++ b/angular.json
@@ -70,8 +70,19 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "qa": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.qa.ts"
+                }
+              ]
             }
-          },
+          }, 
           "defaultConfiguration": "production"
         },
         "serve": {
