define configuration in angular.json  ->serve

--- a/angular.json
+++ b/angular.json
@@ -98,6 +98,9 @@
             },
             "development": {
               "buildTarget": "angular-ecommerce:build:development"
+            }, 
+            "qa": {
+              "buildTarget": "angular-ecommerce:build:qa"
             }
           },
           "defaultConfiguration": "development"
