--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "7.0.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^8.6.4",
     "bootstrap": "^5.3.3",
     "rxjs": "7.8.2",
     "tslib": "2.3.0",
